# QuantLab

./: .gitignore  AGENTS.md  CLAUDE.md  CURRENT_STATE.md  README.md  TODO.md  combined_docs.md  etf_momentum_rotation.py  experiments.md  hma_v2.ipynb  hma_v2.py  intraday_momentum_strategy.py  intraday_momentum_strategy_nb.py  merge_docs.py  polars_lab.ipynb  progress.md  project-status.md  pure_eval.ipynb  pyproject.toml
.claude/: settings.json
Data/: BTC.csv  CSI300.csv  SZEXT50.csv
agent/: README.md  __init__.py  chart.py  config.yaml  context.py  prompt.md  report.py  run.py
backtest-engine/: Cargo.toml  config.toml  config_wmacd.toml  run_b1.bat  run_renko.bat  run_rotation.bat  run_strategy_ml.bat  run_strategy_ml_dedicated.bat  run_strategy_opt.bat  run_strategy_wmacd.bat
backtest-engine/crates/amv-cohort-diagnostic/: Cargo.toml  config_5td_rolling18.toml  config_6td_rolling21.toml
backtest-engine/crates/amv-cohort-diagnostic/src/: components.rs  main.rs  resources.rs  systems.rs
backtest-engine/crates/amv-topn/: Cargo.toml  config.toml  config_10d.toml  config_1td_no_stop.toml  config_20d.toml  config_2td_no_stop.toml  config_3td_no_stop.toml  config_3td_static_strict_top3_no_stop.toml  config_5d.toml  config_5td_rolling21_refill_top10_no_stop.toml  config_5td_rolling21_strict_top3_duplicate_no_stop.toml  config_5td_static_strict_top3_no_stop.toml  config_6td_no_stop.toml  config_6td_rolling21_refill_top10_duplicate_no_stop.toml  config_6td_rolling21_refill_top10_no_stop.toml  config_6td_rolling21_strict_top3_no_stop.toml  config_6td_static_refill_top10_no_stop.toml  config_6td_static_strict_top3_early_stop_d2_prevneg.toml  config_6td_static_strict_top3_early_stop_test.toml  config_6td_static_strict_top3_no_stop.toml
backtest-engine/crates/amv-topn/src/: components.rs  main.rs  resources.rs  systems.rs
backtest-engine/crates/b1/: Cargo.toml  config.toml  config_ml.toml  config_wmacd.toml  config_wmacd_ml.toml
backtest-engine/crates/b1/src/: components.rs  main.rs  resources.rs  systems.rs
backtest-engine/crates/b3/: Cargo.toml  config.toml
backtest-engine/crates/b3/src/: components.rs  main.rs  resources.rs  systems.rs
backtest-engine/crates/core/: Cargo.toml
backtest-engine/crates/core/src/: lib.rs
backtest-engine/crates/renko/: Cargo.toml  config.toml
backtest-engine/crates/renko/src/: components.rs  main.rs  resources.rs  systems.rs
backtest-engine/crates/rotation/: Cargo.toml  config.toml
backtest-engine/crates/rotation/src/: components.rs  main.rs  resources.rs  systems.rs
backtest-engine/src/: main.rs
backtest-engine/src/components/: mod.rs
backtest-engine/src/resources/: mod.rs
backtest-engine/src/systems/: mod.rs
docs/: cleanup-plan.md  script-inventory.md
experiments/: active-market-value-automation.md  archive-index.md  b1-condition-mining-plan.md  b1-ml-dedicated.md  b1-ml-fullmarket.md  b1-next-phase.md  rotation-benchmark.md  rotation-factors.md  rotation-next-phase.md  target-strategy-evolution.md
factors/: __init__.py  registry.py
manifests/: __init__.py  b1_expanded_textbook_cases.py  b1_textbook_cases.py  rotation_feature_sets.py
markdown/: B1代码2.0.2k.txt  B1代码3.0.0b.txt  B1代码v2.04b.txt  baostock_help.md  qmt_examples.md  qmt_faq.md  qmt_market_module.md
notebooks/: active_market_value_regime_lab.py  analyze_anything.ipynb  analyze_anything.py  analyze_china_mobile.ipynb  b1_alpha_proof.py  b1_case_expansion_mining.py  b1_condition_mining.py  b1_ml_dedicated.py  b1_ml_explore.py  b1_route_a_baseline.py  b1_seed_ml_baseline.py  b1_stage0_J_interaction.py  b1_stage0_alpha_proof.py  b1_stage0_textbook_v2.py  chronos_b1_base.py  cross_section_rotation.py  etf_momentum_rotation.py  factor_explorer.py  golden_touch.py  perfect_top10b1_analyze.py  permanent_portfolio_backtest.ipynb  renko_ml_explore.py  rotation_factor_lab.py  sequence_b1_base.py  sequence_b1_opt.py  simple_b1.py  simple_b1_lab.py  simple_b1_opt.py  simple_renko.py  smart_b1_base.py  smart_b1_opt.py  stock_viewer.py  textbook_case_classifier.py  trend_p3_medium_demo.py
reports/: Gemini-金融量化强化学习的演进与变局.md  amv_duplicate_position_diagnostic_summary.json  amv_executable_sleeve_rust_yearly.json  amv_limit_ecology_diagnostic.json  amv_limit_ecology_event_sleeve_rust_summary.json  amv_limit_first_board_medium128_diagnostic.json  amv_limit_first_board_pullback_drawdown_attribution.json  amv_limit_first_board_pullback_hold_risk_scan.json  amv_limit_first_board_risk_variant_scan.json  amv_limit_first_board_weak_window_diagnostic.json  amv_liquidity_trend_refinement_diagnostic.json  amv_market_sentiment_diagnostic.json  amv_medium_trend_quality_diagnostic.json  amv_p3_annual_restart_cadence_context_combo.json  amv_p3_annual_restart_cadence_quick.json  amv_p3_context_combo_attribution.json  amv_p3_context_combo_cadence.json  amv_p3_context_combo_validation.json  amv_p3_context_combo_vs_medium_attribution.json  amv_p3_early_stop_rust_summary.json  amv_p3_medium_trend_quality_attribution.json  amv_p3_medium_trend_quality_cadence.json  amv_p3_medium_trend_quality_rust_summary.json  amv_p3_pb3_gated_allocation.json  amv_p3_raw_vs_adjusted_trade_attribution.json  amv_p3_ref_swap_feature_explain.json  amv_p3_sector_tailwind_cadence.json  amv_p3_sector_tailwind_cadence_w20.json  amv_p3_sector_tailwind_complete_cadence.json  amv_p3_sector_tailwind_complete_cadence_p0p03.json  amv_p3_sector_tailwind_complete_grid.json  amv_p3_sector_tailwind_rerank_attribution.json  amv_p3_sector_tailwind_rerank_summary.json  amv_p3_sector_tailwind_robustness.json  amv_p3_static_cadence_sensitivity.json  amv_p3_vs_ref_trade_attribution.json  amv_pb3_gating_robustness.json  amv_pb3_regime_gating_rust_summary.json  amv_pullback_pb3_vs_pb1_rolling_refill_attribution.json  amv_pullback_pb3_vs_pb2_rolling_refill_attribution.json  (+17 more)
research/: README.md  explore_factor.py  explore_regime.py  factor_ledger.jsonl  scan_weights.py
results/: BTC_backtesting_report.html  BTC_trades_backtestingpy.csv
rpa_capture/: README.md  calibrate_region.py  requirements.txt  run_capture.py
(+406 files in other folders)
