[project]
name = "quantlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.16.90",
    "backtesting>=0.6.4",
    "bokeh>=3.7.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-okx>=0.3.8",
    "ta-lib>=0.6.3",
    "vectorbt>=0.27.3",
    "yfinance>=0.2.61",
]
