[project]
name = "quantlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.16.90",
    "backtesting>=0.6.4",
    "bokeh>=3.7.2",
    "catboost>=1.2.8",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "marimo>=0.14.17",
    "nbformat>=5.10.4",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars[all]>=1.32.3",
    "python-okx>=0.3.8",
    "ta-lib>=0.6.3",
    "vectorbt>=0.27.3",
    "watchdog>=6.0.0",
    "yfinance>=0.2.61",
    "torch",
    "torchvision",
    "chronos-forecasting>=2.2.2",
]

# 1. 定义源：根据截图中的 URL，我们指向 cu130
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# 2. 路由规则：Windows 强制走 CUDA 13.0，Mac 继续走默认
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
