[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "strategies"]

[project]
name = "quantlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtesting>=0.6.4",
    "bokeh>=3.7.2",
    "catboost>=1.2.8",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "marimo>=0.14.17",
    "nbformat>=5.10.4",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "polars[all]>=1.32.3",
    "python-okx>=0.3.8",
    "vectorbt>=0.27.3",
    "watchdog>=6.0.0",
    "yfinance>=0.2.61",
    "torch",
    "torchvision",
    "chronos-forecasting>=2.2.2",
    "baostock>=0.8.9",
    "duckdb>=1.4.3",
    "google-genai>=1.67.0",
    "kaleido>=1.2.0",
    "pyobjc-framework-cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-quartz; sys_platform == 'darwin'",
    "pyobjc-framework-vision; sys_platform == 'darwin'",
    "pyyaml>=6.0.2",
    "lightgbm>=4.6.0",
    "pypdf>=6.13.0",
    "pdfplumber>=0.11.9",
    "reportlab>=4.5.1",
    "pdf2image>=1.17.0",
]

# 1. 默认源：统一锁到阿里云镜像，避免不同设备因终端环境变量导致 `uv.lock` 漂移
[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

# 2. 定义源：Windows 上的 torch / torchvision 继续显式走 cu130
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# 3. 路由规则：Windows 强制走 CUDA 13.0，其余平台走默认源
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
