[package]
name = "bt-amv-topn"
version = "0.1.0"
edition = "2021"
description = "AMV 多头宽池 TopN 排序策略回测"

[dependencies]
bt-core = { path = "../core" }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
polars = { workspace = true }
clap = { workspace = true }
