[package]
name = "bt-b3"
version = "0.1.0"
edition = "2021"
description = "B3 AMV bull 波段接力策略回测"

[dependencies]
bt-core = { path = "../core" }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
polars = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
