[package]
name = "bt-renko"
version = "0.1.0"
edition = "2021"
description = "Renko 截面短线回测"

[dependencies]
bt-core = { path = "../core" }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
polars = { workspace = true }
clap = { workspace = true }
